Implementing GameSetupState